issue #8 - sidebar is now on desktop opened, and vice versa on mobile view

--- a/xsicht/static/css/main.css
+++ b/xsicht/static/css/main.css
@@ -69,6 +69,18 @@ a:hover {
     font-weight: 700;
 }
 
+@media screen and (max-width: 759px) {
+    .mobile-hidden {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 760px) {
+    .desktop-hidden {
+        display: none;
+    }
+}
+
 hr {
     display: block;
     width: 10%;
